k8_ms/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: back
  labels:
    app: user-service
    app.kubernetes.io/part-of: full-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: tushar15july/micro-services:user-service-v2
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 20
            periodSeconds: 30
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-service
  namespace: back
  labels:
    app: dashboard-service
    app.kubernetes.io/part-of: full-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-service
  template:
    metadata:
      labels:
        app: dashboard-service
    spec:
      containers:
        - name: dashboard-service
          image: tushar15july/micro-services:dashboard-service-v2
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
          readinessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 20
            periodSeconds: 30
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: settings-service
  namespace: back
  labels:
    app: settings-service
    app.kubernetes.io/part-of: full-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: settings-service
  template:
    metadata:
      labels:
        app: settings-service
    spec:
      containers:
        - name: settings-service
          image: tushar15july/micro-services:settings-service-v2
          imagePullPolicy: Always
          ports:
            - containerPort: 3003
          readinessProbe:
            httpGet:
              path: /health
              port: 3003
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3003
            initialDelaySeconds: 20
            periodSeconds: 30
