k8_ms/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: back
  labels:
    app: user-service
    app.kubernetes.io/part-of: full-application
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - name: http
      port: 3001
      targetPort: 3001
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
  namespace: back
  labels:
    app: dashboard-service
    app.kubernetes.io/part-of: full-application
spec:
  type: ClusterIP
  selector:
    app: dashboard-service
  ports:
    - name: http
      port: 3002
      targetPort: 3002
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: settings-service
  namespace: back
  labels:
    app: settings-service
    app.kubernetes.io/part-of: full-application
spec:
  type: ClusterIP
  selector:
    app: settings-service
  ports:
    - name: http
      port: 3003
      targetPort: 3003
      protocol: TCP
