k8_ms/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: front
  labels:
    app: frontend
    app.kubernetes.io/part-of: full-application
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
